[gd_scene format=3 uid="uid://c0cyy16d54i5s"]

[ext_resource type="Script" uid="uid://dabbtg8gr7ku4" path="res://level_selector.gd" id="1_selector"]

[node name="LevelSelector" type="Control" unique_id=1237597516]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_selector")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1035635873]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=824250950]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -30.0
offset_right = 40.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="VBoxContainer" unique_id=267464089]
layout_mode = 2
text = "SELECT LEVEL"
horizontal_alignment = 1

[node name="Level1Button" type="Button" parent="VBoxContainer" unique_id=797640657]
layout_mode = 2
text = "Level 1"

[node name="Level2Button" type="Button" parent="VBoxContainer" unique_id=2102100695]
layout_mode = 2
disabled = true
text = "Level 2"

[node name="Level3Button" type="Button" parent="VBoxContainer" unique_id=1186146988]
layout_mode = 2
disabled = true
text = "Level 3"
